welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: type int
var nbPas:int = 0
          ^Variables:4: error: not found: type int
  var nbPas:int = nbPas + 1
            ^Variables:7: error: not found: type int
var dejaFait:int = 0
             ^Variables:8: error: not found: type ==
while (! dejaFait:int == nbPas) {
                      ^Variables:10: error: not found: type int
  var dejaFait:int = dejaFait +1
               ^